<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nighthawk</string>
    <string name="blank" />
    <string name="ns_nighthawk">Nighthawk</string>
    <string name="ns_motto">Private money in your pocket.</string>
    <string name="ns_powered_by">Powered by Zcash</string>
    <string name="ns_get_started">Get Started</string>
    <string name="ns_landing_text">If it\'s your first time using Nighthawk, you\'ll need to create a wallet. If you are returning to Nighthawk, you can try to restore your previous wallet.</string>
    <string name="ns_landing_footer">By using this app you accept our\nTerms and Conditions</string>
    <string name="ns_terms_conditions">Terms and Conditions</string>
    <string name="ns_create_wallet">Create Wallet</string>
    <string name="ns_create_wallet_title">Write down your backup seed</string>
    <string name="ns_create_wallet_text">If you lose access to your phone or Nighthawk wallet, the only way you can regain access to your Zcash is if you have this 24 word phrase and wallet birthday code.\n\nWrite it down on paper and store it somewhere safe.</string>
    <string name="ns_create_wallet_confirm_text">I confirm I have written down my seed phrase.</string>
    <string name="ns_restore_from_backup">Restore from Backup</string>
    <string name="ns_restore_wallet_text">Enter your 24 word seed phrase below. If you do not have this phrase, you will need to create a new wallet.</string>
    <string name="ns_your_seed_phrase">Your seed phrase</string>
    <string name="ns_wallet_birthday">Wallet Birthday: %s</string>
    <string name="ns_birthday_height">Birthday Height</string>
    <string name="ns_your_seed_error">Error - This doesn\'t look like a valid seed phrase.</string>
    <string name="ns_continue">Continue</string>
    <string name="ns_receive">Receive</string>
    <string name="ns_transaction_history">Transactions History</string>
    <string name="ns_copy">Copy</string>
    <string name="ns_shielded_address">Shielded address</string>
    <string name="ns_transparent_address">Transparent address</string>
    <string name="ns_wallet">Wallet</string>
    <string name="ns_connecting">Connecting</string>
    <string name="ns_reconnecting">Reconnecting</string>
    <string name="ns_preparing_download">Preparing to download</string>
    <string name="ns_downloading">Downloading</string>
    <string name="ns_validating">Validating</string>
    <string name="ns_enhancing">Enhancing</string>
    <string name="ns_preparing_scan">Preparing to scan</string>
    <string name="ns_scanning">Scanning…%1$d%%</string>
    <string name="ns_finalizing">Finalizing</string>
    <string name="ns_swipe_left">Swipe left to show your balance</string>
    <string name="ns_zec">ZEC</string>
    <string name="ns_around">around %s</string>
    <string name="ns_total_balance">Total balance</string>
    <string name="ns_shielded_balance">Shielded balance</string>
    <string name="ns_sapling_balance">Sapling balance</string>
    <string name="ns_transparent_balance">Transparent balance</string>
    <string name="ns_shield_now">Shield Now</string>
    <string name="ns_zec_empty">--- ZEC</string>
    <string name="ns_expecting_balance_snack_bar_msg">Expecting %s ZEC</string>
    <string name="ns_recent_activity">Recent activity</string>
    <string name="ns_received">Received</string>
    <string name="ns_sent">Sent</string>
    <string name="ns_auto_shielded_funds">Auto-shielded funds</string>
    <string name="ns_transaction_details">Transaction details</string>
    <string name="ns_show_memo">Show memo</string>
    <string name="ns_received_from">Received from %s</string>
    <string name="ns_sent_from">Sent from %s</string>
    <string name="ns_transparent_wallet">transparent wallet</string>
    <string name="ns_shielded_wallet">shielded wallet</string>
    <string name="ns_pending">Pending</string>
    <string name="ns_pending_confirmations">Pending %s</string>
    <string name="ns_confirmed">Confirmed</string>
    <string name="ns_view_block_explorer">View on Block explorer</string>
    <string name="ns_view_on_explorer">View on explorer</string>
    <string name="ns_time_utc">Time (UTC)</string>
    <string name="ns_block_id">Block ID</string>
    <string name="ns_confirmations">Confirmations</string>
    <string name="ns_transaction_id">Transaction ID</string>
    <string name="ns_processing">Processing</string>
    <string name="ns_transfer">Transfer</string>
    <string name="ns_transfer_title">Send and receive Zcash</string>
    <string name="ns_send_money">Send money</string>
    <string name="ns_send_money_text">Allow someone to scan the code to send money</string>
    <string name="ns_receive_money">Receive money</string>
    <string name="ns_receive_money_text">Your wallet address will be copied to the clipboard</string>
    <string name="ns_top_up">Top up your wallet</string>
    <string name="ns_top_up_text">Securely buy Zcash through our partners.</string>
    <string name="ns_buy_moonpay">Buy from MoonPay</string>
    <string name="ns_buy_moonpay_text">Buy ZEC with a credit card.</string>
    <string name="ns_swap_sideshift">Swap with SideShift.ai</string>
    <string name="ns_swap_sideshift_text">Swap between 30+ coins. No sign-up required.</string>
    <string name="ns_swap_stealthex">Swap with StealthEx.io</string>
    <string name="ns_swap_stealthex_text">Swap transparent coins without limits.</string>
    <string name="ns_receive_money_securely">Receive money securely</string>
    <string name="ns_show_qr_code">Show QR Code</string>
    <string name="ns_show_qr_code_text">Allow someone to scan the code to send money</string>
    <string name="ns_copy_private_address">Copy private address</string>
    <string name="ns_copy_private_address_text">Your wallet address will be copied to the clipboard.</string>
    <string name="ns_receive_money_publicly">Receive money publicly</string>
    <string name="ns_copy_public_address">Copy a non-private address</string>
    <string name="ns_receive_money_publicly_text">This will copy your t-address.</string>
    <string name="ns_private_address">Private Address</string>
    <string name="ns_non_private_address">Non-Private Address</string>
    <string name="ns_top_up_your_wallet">Top up your wallet</string>
    <string name="ns_top_up_your_wallet_msg">Buy or trade Zcash through our specially selected partners.</string>
    <string name="ns_see_more">See More</string>
    <string name="ns_settings">Settings</string>
    <string name="ns_sync_notifications">Sync notifications</string>
    <string name="ns_sync_notifications_text">Reminding you to keep the wallet up-to-date</string>
    <string name="ns_sync_notifications_body">When Nighthawk wallet is closed for a long period of time, then it will take longer to start up when you do want to use it.\n\nAllow sync notifications to remind you to open the wallet every week.</string>
    <string name="ns_backup_wallet">Backup your wallet</string>
    <string name="ns_backup_wallet_text">Keep your wallet safe in case you lose your phone</string>
    <string name="ns_backup_wallet_heading">Write down your backup seed</string>
    <string name="ns_backup_wallet_body">If you lose access to your phone or Nighthawk wallet, the only way you can regain access to your Zcash is if you have this 24 word phrase and wallet birthday code.\n\nWrite it down on paper and store it somewhere safe.</string>
    <string name="ns_backup_wallet_pdf">Save as PDF</string>
    <string name="ns_rescan_wallet">Rescan wallet</string>
    <string name="ns_rescan_wallet_text">Rescan wallet balances to troubleshoot issues.</string>
    <string name="ns_rescan_wallet_body">![CDATA[This fix may take a while!<br/><br/>A <b>FULL</b> scan will rewind %1$s blocks to this wallet\'s birthday and take around %2$s.<br/><br/>A <b>WIPE</b> is like a full scan but it first deletes all data then restores it from your backup seed words.]]</string>
    <string name="ns_rescan_wallet_full">Full rescan</string>
    <string name="ns_rescan_wallet_wipe">Wipe &amp; restart</string>
    <string name="ns_fiat_currency">Fiat Currency</string>
    <string name="ns_fiat_currency_text">Choose your local currency</string>
    <string name="ns_fiat_currency_body">Choose your local currency so that we can show you an close estimate of how much your ZEC is worth.\n\nWhen you first open the app, the exchange rate is fetched from CoinGecko API v3 and used to calculate values. Your fund amounts are never revealed to any server.</string>
    <string name="ns_change_server">Change server</string>
    <string name="ns_change_server_text">Change backend lightwalletd server.</string>
    <string name="ns_external_services">External services</string>
    <string name="ns_external_services_text">Opt-in to our partner services.</string>
    <string name="ns_external_services_uns">Enable Unstoppable Domain Service</string>
    <string name="ns_security">Security</string>
    <string name="ns_security_text">Set/Change Pin Code &amp; Biometric</string>
    <string name="ns_security_choose">Choose PIN code</string>
    <string name="ns_security_try_again">Please try again</string>
    <string name="ns_about">About</string>
    <string name="ns_about_message">Nighthawk is a Shielded Zcash light-wallet with support for Z-addresses, including sending &amp; receiving shielded transactions, memo support &amp; optional t-addresses support with Auto-Shielding technology.\n\nAs a non-custodial wallet for Zcash, you have sole responsibility over its funds. Please immediately and securely back up the seed words upon creating a wallet.\n\nZcash is a digital currency, or cryptocurrency, like Bitcoin. Zcash was built on the original Bitcoin code base. It was conceived by scientists at MIT, Johns Hopkins and other respected academic and scientific institutions.\n\nNighthawk Wallet requires trust in the default or custom lightwalletd server to display accurate transaction information and CoinGecko service for exchange rate feed. This software is provided "as is", without warranty of any kind, express or implied.</string>
    <string name="ns_view_source">View Source</string>
    <string name="ns_about_text">Nighthawk v%s &amp; Licenses</string>
    <string name="ns_view_license">OSS Licenses</string>
    <string name="ns_source_code_link">https://github.com/nighthawk-apps/nighthawk-wallet-android</string>
    <string name="ns_privacy_policy_link">https://nighthawkwallet.com/privacypolicy/</string>
    <string name="ns_back_up_seed_dialog_title">View Seed Words?</string>
    <string name="ns_back_up_seed_dialog_body">WARNING: Please make sure that you are the only one viewing your phone as your wallet seed key will be shown in the next screen.</string>
    <string name="ns_back_up_seed_dialog_positive">View Seed</string>
    <string name="ns_please_try_again">Please try again</string>
    <string name="ns_disable_pin">Disable Pin</string>
    <string name="ns_disable_pin_message">Pin disabled</string>
    <string name="ns_view_licences">View Licences</string>
    <string name="ns_view_wallet">View Wallet</string>
    <string name="ns_add_message">Add a message to your payment</string>
    <string name="ns_write_something">Write something…</string>
    <string name="ns_skip">Skip</string>
    <string name="ns_success">Success</string>
    <string name="ns_done">Done</string>
    <string name="ns_include_reply_to">include reply-to</string>
    <string name="cancel">Cancel</string>
    <string name="content_description_settings_back">back</string>
    <string name="export_pdf">Export PDF</string>
    <string name="pdf_dialog_sub_heading">Export the seed words to a password protected PDF which can be backed up to user secured portable storage devices.</string>
    <string name="pdf_password_hint">Please Enter Password</string>
</resources>