<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main">

    <View
        android:id="@+id/hit_area_close"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:alpha="0.3"
        android:background="@android:color/transparent"
        android:elevation="6dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/content_description_settings_back"
        android:elevation="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Nighthawk.MaterialComponents.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ns_about"
        android:textColor="@color/ns_parmaviolet"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvBody"
        style="@style/Nighthawk.MaterialComponents.SubText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ns_about_message"
        app:layout_constraintEnd_toStartOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/guideLineStart"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvTerms"
        style="@style/Nighthawk.MaterialComponents.Body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guideLineEnd"
        app:layout_constraintStart_toEndOf="@id/guideLineStart"
        android:text="@string/ns_terms_conditions"
        android:textColorLink="@color/ns_peach_100"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tvBody" />

    <Button
        android:id="@+id/btnViewLicences"
        style="@style/Nighthawk.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ns_view_licences"
        app:layout_constraintWidth_min="140dp"
        app:layout_constraintTop_toBottomOf="@id/tvTerms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>
