<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:background="@drawable/background_main"
    android:elevation="8dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Nighthawk.TextAppearance.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_pdf"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        style="@style/Nighthawk.TextAppearance.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pdf_dialog_sub_heading"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/Nighthawk.TextInput.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:hint="@string/pdf_password_hint"
        android:nestedScrollingEnabled="true"
        app:hintTextColor="@color/zcashWhite"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:minHeight="40dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnPositive"
        style="@style/Nighthawk.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/selector_primary_button"
        android:enabled="false"
        android:text="@string/export_pdf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword" />

    <Button
        android:id="@+id/btnNegative"
        style="@style/Nighthawk.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textColor="@color/zcashWhite"
        app:layout_constraintEnd_toStartOf="@id/btnPositive"
        app:layout_constraintTop_toTopOf="@id/btnPositive" />

</androidx.constraintlayout.widget.ConstraintLayout>
