<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ns_dark_navy"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/hit_area_exit"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:alpha="0.3"
            android:background="@android:color/transparent"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035" />

        <ImageView
            android:id="@+id/icon_exit"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="22dp"
            android:contentDescription="@string/content_description_settings_back"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.06"
            app:srcCompat="@drawable/ic_icon_back" />

        <ImageView
            android:id="@+id/icon_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_exit"
            app:srcCompat="@drawable/ic_nighthawk_logo" />

        <TextView
            android:id="@+id/text_message"
            style="@style/Nighthawk.MaterialComponents.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/ns_nighthawk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_profile" />

        <TextView
            android:id="@+id/title_message"
            style="@style/Nighthawk.MaterialComponents.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:text="@string/ns_restore_from_backup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_message" />

        <TextView
            android:id="@+id/body_message"
            style="@style/Nighthawk.MaterialComponents.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/ns_restore_wallet_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_message" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/seed_input"
            style="@style/Nighthawk.MaterialComponents.Body"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:background="@drawable/background_r4_empty_et"
            android:gravity="top"
            android:hint="@string/ns_your_seed_phrase"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textColorHint="@color/text_light_dimmed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body_message" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_birthdate"
            style="@style/Nighthawk.MaterialComponents.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/background_r4_empty_et"
            android:gravity="center_vertical"
            android:hint="@string/ns_birthday_height"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="8"
            android:paddingHorizontal="16dp"
            android:singleLine="true"
            android:textColorHint="@color/text_light_dimmed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="54dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seed_input" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            style="@style/Nighthawk.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            android:enabled="false"
            android:text="@string/ns_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_birthdate"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintWidth_min="150dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33333"
            app:layout_constraintWidth_percent="0.4053398058"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_rawRes="@raw/lottie_success" />

        <TextView
            android:id="@+id/text_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/ns_success"
            android:textColor="@color/text_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_success" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_success"
            style="@style/Nighthawk.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ns_view_wallet"
            android:textColor="@color/text_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_success" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="lottie_success, text_success, button_success" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="button_done" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="icon_profile, text_message, title_message, body_message, seed_input, input_birthdate" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
